--- a/TiendApp/app/src/main/AndroidManifest.xml
+++ b/TiendApp/app/src/main/AndroidManifest.xml
@@ -8,26 +8,42 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".HomeActivity" >
+
+        <!-- Home Activity -->
+        <activity
+            android:name=".HomeActivity"
+            android:theme="@style/AppTheme"
+            >
+
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Categories" >
-        </activity>
+
+        <!-- Categories Activity -->
         <activity
-            android:name=".catalogue"
+            android:name=".Categories"
+             >
+
+        </activity>
+
+
+        <!-- Catalogue Activity -->
+        <activity
+            android:name=".Catalogue"
             android:label="@string/title_activity_catalogue"
-            android:parentActivityName=".Categories"
-            android:theme="@style/AppTheme.NoActionBar" >
+            >
+
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="hci.tiendapp.Categories" />
         </activity>
-        <activity android:name=".Catalogue" >
-        </activity>
+
+
+
     </application>
 
 </manifest>
