--- a/TiendApp/app/src/main/AndroidManifest.xml
+++ b/TiendApp/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity
             android:name=".Catalogue"
             android:label="@string/title_activity_catalogue"
+            android:theme="@style/AppTheme"
             >
 
             <meta-data
