--- a/TiendApp/app/src/main/AndroidManifest.xml
+++ b/TiendApp/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="hci.tiendapp" >
 
     <application
+        android:name=".TiendApp"
         android:allowBackup="true"
         android:icon="@drawable/logo2"
         android:label="@string/app_name"
@@ -11,7 +12,7 @@
 
         <!-- Home Activity -->
         <activity
-            android:name=".HomeActivity"
+            android:name=".activities.HomeActivity"
             android:theme="@style/AppTheme"
             >
 
