--- a/TiendApp/app/src/main/AndroidManifest.xml
+++ b/TiendApp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="hci.tiendapp" >
 
+    <permission android:name="tiendapp.internet.permission"
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo2"
