--- a/TiendApp/app/src/main/AndroidManifest.xml
+++ b/TiendApp/app/src/main/AndroidManifest.xml
@@ -14,13 +14,15 @@
             android:name=".HomeActivity"
             android:theme="@style/AppTheme"
             >
-
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".SearchResultsActivity" />
         </activity>
 
         <!-- Categories Activity -->
@@ -29,7 +31,6 @@
              >
 
         </activity>
-
 
         <!-- Catalogue Activity -->
         <activity
@@ -43,6 +44,25 @@
                 android:value="hci.tiendapp.Categories" />
         </activity>
 
+
+        <!-- Searchable activity -->
+        <activity
+        android:name=".SearchResultsActivity"
+        android:label="@string/app_name">
+
+        <!-- to identify this activity as "searchable" -->
+        <intent-filter>
+            <action android:name="android.intent.action.SEARCH" />
+            <category android:name="android.intent.category.DEFAULT" />
+        </intent-filter>
+
+        <meta-data
+            android:name="android.app.searchable"
+            android:resource="@xml/searchable" />
+        </activity>
+
+
+        <!-- Alarms -->
         <receiver android:name=".AlarmNotificationReceiver" >
         </receiver>
 
