--- a/TiendApp/app/src/main/AndroidManifest.xml
+++ b/TiendApp/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="hci.tiendapp" >
 
-    <permission android:name="tiendapp.internet.permission"
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".TiendApp"
         android:allowBackup="true"
