--- a/TiendApp/app/src/main/AndroidManifest.xml
+++ b/TiendApp/app/src/main/AndroidManifest.xml
@@ -3,22 +3,24 @@
     package="hci.tiendapp" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".TiendApp"
         android:allowBackup="true"
         android:icon="@drawable/logo2"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
 
         <!-- Home Activity -->
         <activity
             android:name=".activities.HomeActivity"
-            android:theme="@style/AppTheme"
-            >
+            android:theme="@style/AppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
+
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
 
@@ -28,37 +30,31 @@
         </activity>
 
         <!-- CategoriesActivity Activity -->
-        <activity
-            android:name=".activities.CategoriesActivity"
-             >
-
+        <activity android:name=".activities.CategoriesActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.HomeActivity" />
-
         </activity>
 
         <!-- Catalogue Activity -->
         <activity
             android:name=".Catalogue"
             android:label="@string/title_activity_catalogue"
-            android:theme="@style/AppTheme"
-            >
-
+            android:theme="@style/AppTheme" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.CategoriesActivity" />
         </activity>
 
-
         <!-- Searchable activity -->
         <activity
-        android:name=".SearchResultsActivity"
-        android:label="@string/app_name">
+            android:name=".SearchResultsActivity"
+            android:label="@string/app_name" >
 
             <!-- to identify this activity as "searchable" -->
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
 
@@ -67,11 +63,14 @@
                 android:resource="@xml/searchable" />
         </activity>
 
-
         <!-- Alarms -->
         <receiver android:name=".AlarmNotificationReceiver" >
         </receiver>
 
+        <activity android:name=".activities.CarritoActivity" >
+        </activity>
+        <activity android:name=".activities.ProductActivity" >
+        </activity>
     </application>
 
 </manifest>
