--- a/TiendApp/app/build.gradle
+++ b/TiendApp/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'de.hdodenhof:circleimageview:1.2.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile files('libs/gson-2.4.jar')
 }
