--- a/TiendApp/app/src/main/AndroidManifest.xml
+++ b/TiendApp/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="hci.tiendapp" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"></uses-permission>
+
+
 
     <application
         android:name=".TiendApp"
@@ -11,6 +14,14 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
+
+        <service android:name=".background.ProductsService"/>
+        <receiver
+            android:name="hci.tiendapp.background.AlarmReceiver"
+            android:exported="true"
+            android:process=":remote"
+            />
+
 
         <!-- Home Activity -->
         <activity
@@ -36,7 +47,7 @@
                 android:value=".activities.HomeActivity" />
         </activity>
 
-        <!-- CategoriesActivity Activity -->
+        <!-- SubCategoriesActivity Activity -->
         <activity
             android:name=".activities.SubCategoriesActivity"
             >
