--- a/TiendApp/app/src/main/AndroidManifest.xml
+++ b/TiendApp/app/src/main/AndroidManifest.xml
@@ -3,9 +3,7 @@
     package="hci.tiendapp" >
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"></uses-permission>
-
-
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
 
     <application
         android:name=".TiendApp"
@@ -14,14 +12,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
+        <service android:name=".background.ProductsService" />
 
-        <service android:name=".background.ProductsService"/>
         <receiver
             android:name=".background.ProductsService$AlarmReceiver"
             android:exported="true"
-            android:process=":remote"
-            />
-
+            android:process=":remote" />
 
         <!-- Home Activity -->
         <activity
@@ -48,14 +44,10 @@
         </activity>
 
         <!-- SubCategoriesActivity Activity -->
-        <activity
-            android:name=".activities.SubCategoriesActivity"
-            >
-
+        <activity android:name=".activities.SubCategoriesActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.CategoriesActivity" />
-
         </activity>
 
         <!-- Catalogue Activity -->
@@ -92,6 +84,8 @@
         <activity android:name=".activities.CarritoActivity" >
         </activity>
         <activity android:name=".activities.ProductActivity" >
+        </activity>
+        <activity android:name=".activities.SettingsActivity" >
         </activity>
     </application>
 
