--- a/TiendApp/app/src/main/AndroidManifest.xml
+++ b/TiendApp/app/src/main/AndroidManifest.xml
@@ -87,6 +87,10 @@
         </activity>
         <activity android:name=".activities.SettingsActivity" >
         </activity>
+        <application android:name=".ProductsService"
+            android:icon="@drawable/icon"
+            android:label="@string/app_name">
+        </application>
     </application>
 
 </manifest>
