--- a/TiendApp/app/src/main/AndroidManifest.xml
+++ b/TiendApp/app/src/main/AndroidManifest.xml
@@ -12,7 +12,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <service android:name=".background.ProductsService" />
+
+
+        <service
+            android:name=".background.ProductsService"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"/>
 
         <receiver
             android:name=".background.ProductsService$AlarmReceiver"
@@ -52,12 +56,12 @@
 
         <!-- Catalogue Activity -->
         <activity
-            android:name=".Catalogue"
+            android:name=".activities.CatalogueActivity"
             android:label="@string/title_activity_catalogue"
             android:theme="@style/AppTheme" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.CategoriesActivity" />
+                android:value=".activities.SubCategoriesActivity" />
         </activity>
 
         <!-- Searchable activity -->
