--- a/TiendApp/app/build.gradle
+++ b/TiendApp/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:1.2.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile files('libs/gson-2.4.jar')
+    compile 'com.daimajia.slider:library:1.1.5'
 }
