--- a/TiendApp/app/src/main/AndroidManifest.xml
+++ b/TiendApp/app/src/main/AndroidManifest.xml
@@ -37,14 +37,18 @@
         </activity>
 
         <!-- CategoriesActivity Activity -->
-        <activity android:name=".activities.CategoriesActivity" >
+        <activity
+            android:name=".activities.CategoriesActivity"
+            android:theme="@style/AppTheme" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.HomeActivity" />
         </activity>
 
         <!-- SubCategoriesActivity Activity -->
-        <activity android:name=".activities.SubCategoriesActivity" >
+        <activity
+            android:name=".activities.SubCategoriesActivity"
+            android:theme="@style/AppTheme" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.CategoriesActivity" />
@@ -53,11 +57,18 @@
         <!-- Catalogue Activity -->
         <activity
             android:name=".activities.CatalogueActivity"
-            android:label="@string/title_activity_catalogue"
             android:theme="@style/AppTheme" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.SubCategoriesActivity" />
+        </activity>
+
+        <activity
+            android:name=".activities.ProductActivity"
+            android:theme="@style/AppTheme" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.CatalogueActivity" />
         </activity>
 
         <!-- Searchable activity -->
@@ -83,14 +94,11 @@
 
         <activity android:name=".activities.CarritoActivity" >
         </activity>
-        <activity android:name=".activities.ProductActivity" >
-        </activity>
+
         <activity android:name=".activities.SettingsActivity" >
         </activity>
-        <application android:name=".ProductsService"
-            android:icon="@drawable/icon"
-            android:label="@string/app_name">
-        </application>
+
+
     </application>
 
 </manifest>
