--- a/TiendApp/app/src/main/AndroidManifest.xml
+++ b/TiendApp/app/src/main/AndroidManifest.xml
@@ -5,6 +5,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:name=".TiendApp"
         android:allowBackup="true"
@@ -12,8 +17,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-
-
         <receiver
             android:name=".background.ProductsService$AlarmReceiver"
             android:exported="true"
@@ -22,15 +25,17 @@
         <!-- Home Activity -->
         <activity
             android:name=".activities.HomeActivity"
-            android:theme="@style/AppTheme"
-            android:launchMode="singleTop">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:launchMode="singleTop"
+            android:theme="@style/AppTheme">
 
-                <category android:name="android.intent.category.LAUNCHER" />
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-                 />
-            </intent-filter>
+            <category android:name="android.intent.category.LAUNCHER" />
+            />
+        </intent-filter>
+
+
 
             <meta-data
                 android:name="android.app.default_searchable"
@@ -71,10 +76,7 @@
             <meta-data
                 android:name="android.app.default_searchable"
                 android:value=".SearchResultsActivity" />
-
         </activity>
-
-
 
         <!-- Product Activity -->
         <activity
@@ -92,7 +94,7 @@
         <activity
             android:name=".SearchResultsActivity"
             android:label="@string/app_name"
-            android:noHistory="true">
+            android:noHistory="true" >
 
             <!-- to identify this activity as "searchable" -->
             <intent-filter>
@@ -112,11 +114,14 @@
 
         <activity android:name=".activities.CarritoActivity" >
         </activity>
-
         <activity android:name=".activities.SettingsActivity" >
         </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login" >
 
 
+        </activity>
     </application>
 
 </manifest>
