--- a/TiendApp/app/src/main/AndroidManifest.xml
+++ b/TiendApp/app/src/main/AndroidManifest.xml
@@ -112,7 +112,9 @@
         <receiver android:name=".AlarmNotificationReceiver" >
         </receiver>
 
-        <activity android:name=".activities.CarritoActivity" >
+        <activity
+            android:name=".activities.CarritoActivity"
+            android:label="@string/title_activity_carrito">
         </activity>
         <activity android:name=".activities.SettingsActivity" >
         </activity>
