--- a/TiendApp/app/src/main/AndroidManifest.xml
+++ b/TiendApp/app/src/main/AndroidManifest.xml
@@ -106,6 +106,18 @@
                 android:value=".SearchResultsActivity" />
         </activity>
 
+        <!-- Orders Activity -->
+        <activity
+            android:name=".activities.OrdersActivity"
+            android:theme="@style/AppTheme" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.HomeActivity" />
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".SearchResultsActivity" />
+        </activity>
+
         <!-- Searchable activity -->
         <activity
             android:name=".SearchResultsActivity"
@@ -136,8 +148,12 @@
         </activity>
         <activity
             android:name=".activities.LoginActivity"
-            android:label="@string/title_activity_login" >
+            android:label="@string/title_activity_login"
+            >
 
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.HomeActivity" />
 
         </activity>
     </application>
